Fixed some review comments
Removed autotranslated texts, and re-introduced the ground.redrawAll()
workaround to fix a problem with the arrows not showing up.

--- a/assets/css/features/study.css
+++ b/assets/css/features/study.css
@@ -49,6 +49,11 @@
 
 .study_option_item_below {
     margin-right: 3rem;
+    min-width: 23ch;
+}
+
+.study_option_item_below > a {
+	display: block;
 }
 
 .select2 {
